# dotsync

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: config.rs  git.rs  main.rs
src/commands/: config_cmd.rs  init.rs  mod.rs  pull.rs  push.rs  sync.rs
