[package]
name = "dotsync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dotsync"
path = "src/main.rs"

[dependencies]
clap    = { version = "4",   features = ["derive"] }
serde   = { version = "1",   features = ["derive"] }
serde_yaml = "0.9"
chrono  = { version = "0.4", features = ["serde"] }
anyhow  = "1"
